# tantivy-bpe-tokenizer

./: Cargo.toml  Makefile  README.md
src/: lib.rs  stream.rs  tokenizer.rs
tests/resources/: example.json
