[package]
name = "tantivy-bpe-tokenizer"
version = "0.1.0"
authors = ["Hitoshi Manabe <int.toshi13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.14"
tokenizers = { git = "https://github.com/mana-ysh/tokenizers.git", rev = "45dd5cc76c11ee2060dd99fa3da36d60ec7a6041"}
